Fixes market cards on mobile
The heigh:100% style is only needed on desktop because the cards have a
fixed height. On mobile it's not important because the card height
collapses to fit the content. There must be some incompatibility with
Safari on iOS and setting the height on a link, so removing it fixes the
layout.

--- a/app/styles/components/market-card.less
+++ b/app/styles/components/market-card.less
@@ -6,7 +6,9 @@
 }
 
 .MarketCard-link {
-  height: 100%;
+  @media (min-width: @screen-sm-min) {
+    height: 100%;
+  }
 }
 
 .MarketCard-content {
